// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<RiskCard /> render() should render 1`] = `
<div>
  <WithStyles(GridContainer)
    card={true}
    direction="column"
  >
    <WithStyles(GridItem)>
      <WithStyles(GridContainer)
        alignItems="center"
      >
        <BoundCan
          do="create"
          on="risk"
        >
          <WithStyles(GridItem)>
            <WithStyles(Button)
              color="primary"
              onClick={[Function]}
              size="xs"
            >
              <WithStyles(GridContainer)
                alignItems="center"
              >
                <WithStyles(GridItem)>
                  <WithStyles(Icon)
                    bold={true}
                    icon="lnr-plus"
                    size="xsmall"
                  />
                </WithStyles(GridItem)>
              </WithStyles(GridContainer)>
            </WithStyles(Button)>
          </WithStyles(GridItem)>
        </BoundCan>
        <WithStyles(GridItem)
          xs={true}
        >
          <div>
            Risk Assessment
          </div>
        </WithStyles(GridItem)>
      </WithStyles(GridContainer)>
    </WithStyles(GridItem)>
    <WithStyles(GridItem)>
      renderRisks
    </WithStyles(GridItem)>
  </WithStyles(GridContainer)>
</div>
`;

exports[`<RiskCard /> renderChildren() should renderChildren 1`] = `
<div>
  <WithStyles(GridItem)>
    <div>
      2
    </div>
  </WithStyles(GridItem)>
</div>
`;

exports[`<RiskCard /> renderEmpty() should renderEmpty 1`] = `
<div>
  <div>
    No risk activities have been assessed.
  </div>
</div>
`;

exports[`<RiskCard /> renderRisk() should renderRisk 1`] = `
<div>
  <WithStyles(GridItem)
    onClick={[Function]}
  >
    <div
      className=""
    >
      <WithStyles(GridContainer)
        alignItems="center"
        wrap="nowrap"
      >
        <WithStyles(GridItem)>
          <WithStyles(Head)>
            #
            NaN
          </WithStyles(Head)>
        </WithStyles(GridItem)>
        <WithStyles(GridItem)
          xs={true}
        >
          <WithStyles(Connect(WithSimplifyResaga(NodeProp)))
            editable={false}
            isCustomData={false}
            valueKey="content"
          />
        </WithStyles(GridItem)>
        <ConnectFunction>
          <Component />
        </ConnectFunction>
      </WithStyles(GridContainer)>
    </div>
  </WithStyles(GridItem)>
</div>
`;

exports[`<RiskCard /> renderRisks() should renderRisks 1`] = `
<div>
  <WithStyles(GridContainer)
    direction="column"
    spacing={0}
  >
    renderRisk
    renderRisk
  </WithStyles(GridContainer)>
</div>
`;
